@@ -1,3 +1,11 @@
+2000-09-08  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+2000-09-08  Teemu Ikonen  <tpikonen@pcu.helsinki.fi>
+
+	* plot/mesh.m: Also set nologscale before plotting.
+	* plot/__pltopt1__.m: Handle xerrorbars, yerrorbars, and
+	xyerrorbars instead of just errorbars.
+
 2000-08-25  Thomas Walter  <walter@pctc.chemie.uni-erlangen.de>
 
 	* image/image.m: Try display (from ImageMagick) first.
